css/core.css
/* ... */
/*! Core */

/* Top-level elements */
html {
    font-family: sans-serif;
    font-size: 62.5%;
}
body {
    background:#fff;
    font-size:1.6rem;
}
a {
    color:green;
    text-decoration:none;
    transition: all ease-in-out 0.2s;
}
a:hover {
    text-decoration:underline;
}
a:focus {
    text-shadow: 0 0 1rem #28a6ff;
    outline:0;
}

/* Text utilities */
.text-center {
    text-align:center;
}
.text-right {
    text-align:right;
}

/* Parent, document-relative containers */
.contain {
    margin:0 auto;
    max-width:96rem;
    padding:4rem;
}
.flex-center {
    display: flex;
    align-items: center;
    flex-direction: column;
}
.main-header {
    background:#f4f4f4;
    border-bottom: 0.4rem double #aaa;
    padding: 5rem 0;
}
.main-header .contain {
    display: flex;
    padding-top: 0;
    padding-bottom: 0;
    align-items: center;
}
.main-body {
    border-bottom: 0.4rem double #aaa;
    font-size:2.5rem;
}
.main-body img {
    max-width:100%;
}
.main-footer {
    background:#333;
    color:#d8d8d8;
}
.main-footer a {
    color:#fff;
}
.main-footer a:focus {
    color:#83af83;
    text-shadow: 0 0 2rem #fff;
}
.main-footer .contain {
    display: flex;
    justify-content: space-between;
}
.figure {
    width:100%;
}

/* Buttons */
.button--profile {
    background-image: url('../2668987.jpg');
    background-repeat: no-repeat;
    background-size: 100% 100%;
    border-radius: 10%;
    border: none;
    box-shadow: 0 0.4rem 0rem rgb(61, 54, 24);
    cursor: pointer;
    height: 5rem;
    margin: 0;
    overflow: hidden;
    outline: 0;
    transition: 0.2s box-shadow, 0.2s margin;
    width: 5rem;
}
.button--profile:focus {
    outline:0;
}
.button--profile:hover {
    box-shadow: 0 0.4rem 0rem rgb(61, 54, 24), 0 0 4rem rgba(255,255,255,0.4) inset;
    outline:0;
}
.button--profile:active {
    box-shadow: none;
    margin-top: 0.4rem;
    margin-bottom: -0.4rem;
    outline: 0;
}

/* Introductory text in the header */
.intro {
    padding: 0 2rem;
}

/* Titles */
.title {
    font-size:4.2rem;
    margin:3rem 0 6rem;
}
.title-intro {
    font-size: 3rem;
    font-weight: 400;
    margin: 0;
}
.title-intro-link {
    text-decoration:none;
    color:#000;
}
.title-intro-link:hover {
    text-decoration:underline;
}
.title-page { 
    font-size: 3rem;
    margin: 0 0 1rem;
    padding: 0 0 0.5rem;
}
.title-list {
    font-size:2.8rem;
    margin-bottom:0.8rem;
}
.title-footer {
    font-size:1.6rem;
    margin-top:0;
}

/* Subtitles */
.subtitle-intro {
    margin:0 0.5rem;
}
.subtitle-list {
    font-size:1.5rem;
}
.byline {
    margin-bottom:6rem;
}
.figcaption {
    padding:2rem 4rem;
}

/* Lists */
.list {
    margin-bottom:5rem;
}
.list-no-style {
    list-style:none;
}
.list-no-indent {
    padding:0;
}
.list-item {
    padding:1.2rem 3rem 1.2rem 0;
}
.list-cite li {
    padding-bottom:2rem;
}

/* Generic elements */
.a-block {
    display:block;
}
.section-tall {
    padding:10rem 0;
}
.scene {
    border: 0.4rem solid #53565a;
    border-radius: 0.8rem;
    box-shadow: 0 0.5rem 0 0 #c8c8c8;
    height: 30rem;
    overflow: hidden;
    position: relative;
    width: 100%;
    z-index: 1;
}
.scene-blue {
    background-color: #55b8ff;
    background-image: linear-gradient(135deg, #55b8ff 0%,#76d2ff 44%,#00d0ff 100%);
    border-color: #217d93;
}
.scene-purple {
    background-color:#6a5c8e;
    background-image: radial-gradient(ellipse farthest-corner at center bottom, rgb(211, 176, 249) 0%, rgb(106, 92, 142) 100%);
    border-color: #482548;
}
.sky {
    animation: moveclouds 15s infinite linear;
    color: #f4f4f4;
    display: flex;
    flex-flow: row;
    font-size: 6rem;
    justify-content: space-between;
    left: 0;
    position: absolute;
    top: 2rem;
    width: 1100px;
}
.sky * {
    width:6rem;
    text-align:center;
}
@keyframes moveclouds {
    0% {
        left: -148px;
    },
    100% {
        left: 0;
    }
}
.land {
    align-items: center;
    background-color: #33e133;
    background-image: linear-gradient(135deg, #33e133 0%,#e2ff55 44%,#19a412 100%);
    border-color: #d2b48c;
    border-radius: 50%;
    bottom: 12%;
    display:flex;
    color: #fff07c;
    font-style: normal;
    font-size:10rem;
    justify-content:center;
    left: 20%;
    line-height: 2;
    position: absolute;
    right: 20%;
    top: 56%;
    z-index: 3;

    /* Make it a pit! */
    /* box-shadow: 0 0.7rem 0 #4e4e3d inset; */
}
.beach {
    background-color: #ffe8ca;
    background-image: linear-gradient(135deg, #ffe8ca 0%,#c1ab87 44%,#dbc195 100%);
    border-radius: 50%;
    bottom: 8%;
    left: 18%;
    position: absolute;
    right: 18%;
    top: 57%;
    z-index: 2;
}
.sea {
    background-color: #47a5f5;
    background-image: linear-gradient(45deg, #47a5f5 0%,#60abf8 44%,#125bf6 100%);
    bottom: 0;
    left: 0;
    position: absolute;
    right: 0;
    top: 61.8%;
    z-index: 1;
}
.webdev {
    align-items:center;
    display:flex;
    flex-grow:1;
    font-size:10rem;
    height:100%;
    justify-content:center;
    padding-top:2rem;
}
.desk {
    position:absolute;
    height:0;
    left:15%;
    right:15%;
    border-bottom:10rem solid #d79d80;
    border-left: 4rem solid transparent;
    border-right: 4rem solid transparent;
    top:16rem;
    z-index:-1;
}
.desk:after {
    content:"";
    height:4rem;
    display:block;
    background-color:#000;
    position:absolute;
    top:10rem;
    left:-4rem;
    right:-4rem;
}

@media (max-width: 36rem) {
    .contain {
        padding: 2rem;
    }
    .intro {
        padding: 1rem 0 0;
        text-align: center;
    }
    .nav-link {
        padding: 2rem 0;
    }
    .title,
    .byline {
        text-align: center;
    }
    .main-header {
        padding: 2rem;
    }
    .main-header .contain {
        flex-direction: column;
    }
}

